--- a/TPMetodosAgiles/src/main/java/Presentacion/RenovarLicencia.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/RenovarLicencia.form
@@ -82,7 +82,7 @@
                                       <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                                           <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                           <Component id="jButton17" min="-2" pref="38" max="-2" attributes="0"/>
@@ -158,9 +158,9 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Presentacion/identity-card (2).png"/>
+              <Image iconType="3" name="/Presentacion/recycle-sign.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value=" Emitir Licencia"/>
+            <Property name="text" type="java.lang.String" value=" Renovar Licencia"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton16">
