--- a/TPMetodosAgiles/src/main/java/Presentacion/AltaUsuario.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/AltaUsuario.form
@@ -163,7 +163,7 @@
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Presentacion/user (1).png"/>
+              <Image iconType="3" name="/Presentacion/alta-user.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value=" Crear Usuario"/>
             <Property name="focusable" type="boolean" value="false"/>
