--- a/TPMetodosAgiles/src/main/java/Presentacion/Login.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/Login.form
@@ -92,7 +92,7 @@
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="122" max="32767" attributes="0"/>
+                  <EmptySpace pref="122" max="32767" attributes="0"/>
                   <Component id="error" min="-2" pref="410" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="122" max="-2" attributes="0"/>
               </Group>
