--- a/TPMetodosAgiles/src/main/resources/Reporte/ListadoVigentes.jrxml
+++ b/TPMetodosAgiles/src/main/resources/Reporte/ListadoVigentes.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="69c4449a-15e3-4f5e-a62f-8943fa1736e6">
 	<property name="ireport.zoom" value="1.610510000000001"/>
-	<property name="ireport.x" value="33"/>
+	<property name="ireport.x" value="8"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -13,6 +13,9 @@
 			<style mode="Opaque" backcolor="#F0EFEF"/>
 		</conditionalStyle>
 	</style>
+	<parameter name="logo" class="java.lang.Object">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT
      licencia.`id` AS licencia_id,
@@ -81,10 +84,6 @@ group by licencia.`id`]]>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
-			<image>
-				<reportElement uuid="fdcfc690-2290-44f7-a79c-8c28d31ef223" x="1" y="0" width="197" height="90"/>
-				<imageExpression><![CDATA["C:\\Proyectos Java\\TPMetodosAgiles\\TPMetodosAgiles\\src\\main\\resources\\Presentacion\\LogoReporte.jpg"]]></imageExpression>
-			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -101,6 +100,13 @@ group by licencia.`id`]]>
 					</textElement>
 					<text><![CDATA[Apellido]]></text>
 				</staticText>
+				<staticText>
+					<reportElement uuid="1883efe3-737a-4d16-ad5f-ba59c0659457" style="Column header" x="154" y="0" width="86" height="18" forecolor="#000000"/>
+					<textElement textAlignment="Center">
+						<font fontName="Microsoft YaHei UI" size="12" isBold="false"/>
+					</textElement>
+					<text><![CDATA[Vencimiento]]></text>
+				</staticText>
 			</frame>
 			<staticText>
 				<reportElement uuid="86bc2a76-0064-42f3-8849-196f15e7423f" style="Column header" x="499" y="0" width="56" height="18" forecolor="#000000"/>
@@ -115,13 +121,6 @@ group by licencia.`id`]]>
 					<font fontName="Microsoft YaHei UI" size="12" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Grupo +/-]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="1883efe3-737a-4d16-ad5f-ba59c0659457" style="Column header" x="156" y="0" width="86" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font fontName="Microsoft YaHei UI" size="12" isBold="false"/>
-				</textElement>
-				<text><![CDATA[Vencimiento]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="6a3d5c02-14dd-41a5-8ad8-bda22f8426ab" style="Column header" x="74" y="0" width="82" height="18" forecolor="#000000"/>
