--- a/TPMetodosAgiles/src/main/resources/Reporte/ListadoVigentes.jrxml
+++ b/TPMetodosAgiles/src/main/resources/Reporte/ListadoVigentes.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="69c4449a-15e3-4f5e-a62f-8943fa1736e6">
 	<property name="ireport.zoom" value="1.610510000000001"/>
-	<property name="ireport.x" value="8"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -84,6 +84,10 @@ group by licencia.`id`]]>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement uuid="fdcfc690-2290-44f7-a79c-8c28d31ef223" x="9" y="10" width="197" height="90"/>
+				<imageExpression><![CDATA["LogoReporte.jpg"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
